# JEPA_GYM

./: .env  .gitignore  README.md
MountainCar/Preconception/: env.py  env_demo.py  predict_obs_from_features.py  pyproject.toml  train.py  train_RL.py  train_jeap.py
MountainCar/Preconception/jepa/: dataset.py  decorder.py  jepa_config.py  model.py
MountainCar/Preconception/lightning_logs/version_0/: events.out.tfevents.1772725124.Blade.148316.0  events.out.tfevents.1772746362.Blade.3288711.0  hparams.yaml
MountainCar/Preconception/lightning_logs/version_1/: events.out.tfevents.1772725155.Blade.148784.0
MountainCar/Preconception/lightning_logs/version_2/: events.out.tfevents.1772725399.Blade.151860.0  hparams.yaml
MountainCar/Preconception/lightning_logs/version_3/: events.out.tfevents.1772725723.Blade.156414.0
MountainCar/Preconception/logs/: .monitor.csv  evaluations.npz  monitor.csv
MountainCar/Preconception/logs/PPO_1/: events.out.tfevents.1772813034.Blade.26930.0
MountainCar/Preconception/wandb/: latest-run
MountainCar/Preconception/wandb/run-20260312_142528-8dzm0toc/: run-8dzm0toc.wandb
MountainCar/Preconception/wandb/run-20260312_144029-txuoszx9/: run-txuoszx9.wandb
MountainCar/Preconception/wandb/run-20260312_145729-ygbsm1ph/: run-ygbsm1ph.wandb
MountainCar/Preconception/wandb/run-20260312_151137-dldyso6o/: run-dldyso6o.wandb
MountainCar/Preconception/wandb/run-20260312_190911-xqz4n956/: run-xqz4n956.wandb
MountainCar/Preconception/wandb/run-20260312_191154-m39njbzh/: run-m39njbzh.wandb
MountainCar/RL_Policy/: data_geenrator.py  env_demo.py  pyproject.toml  train.py
MountainCar/RL_Policy/logs/: evaluations.npz  monitor.csv
(+190 files in other folders)
